--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <div id="content"></div>
-<script type="text/babel" src="scripts/example.js"></script>
+    <script type="text/babel" src="scripts/example.js"></script>
+    <script type="text/babel">
+        //some ole bull crap
+    </script>
 </body>
 </html>
