--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <title>React Test</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
 </head>
 <body>
     <div id="content"></div>
-    <script type="text/babel" src="scripts/example.js"></script>
+    <script type="text/babel" src="scripts/tutorial1.js"></script>
     <script type="text/babel">
         //some ole bull crap
     </script>
